objects/PRH_Brand_Luxury_Brand__c.object
<CustomObject>
    <description>PRE - Iconic Platform</description>
    <fields>
        <fullName>PRH_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This box is checked if the Iconic Brand is Active</inlineHelpText>
        <label>Active Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRH_Competitor_Brand_Category__c</fullName>
        <label>Competitor Brand Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Champagne</fullName>
                </value>
                <value>
                    <fullName>Cognac</fullName>
                </value>
                <value>
                    <fullName>Gin</fullName>
                </value>
                <value>
                    <fullName>Rum</fullName>
                </value>
                <value>
                    <fullName>Single Malt</fullName>
                </value>
                <value>
                    <fullName>Tequila</fullName>
                </value>
                <value>
                    <fullName>Vodka</fullName>
                </value>
                <value>
                    <fullName>Whisky</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRH_Competitor_Brand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRH_PIM_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for integration with SFA</description>
        <externalId>true</externalId>
        <label>PIM ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PRH_Portfolio_Presence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in algorithm to update Full Le Cercle Portfolio field on collects.
This boolean indicates that the Brand must be taken into account.</description>
        <label>Portfolio Presence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRH_Presence_Category__c</fullName>
        <description>Category of brand for presence check in brand criteria of luxury account</description>
        <label>Presence Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Champagne</fullName>
                </value>
                <value>
                    <fullName>Cognac</fullName>
                </value>
                <value>
                    <fullName>Gin</fullName>
                </value>
                <value>
                    <fullName>Rum</fullName>
                </value>
                <value>
                    <fullName>Single Malt</fullName>
                </value>
                <value>
                    <fullName>Tequila</fullName>
                </value>
                <value>
                    <fullName>Vodka</fullName>
                </value>
                <value>
                    <fullName>Whisky</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRH_SYS_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRH_Sequence__c</fullName>
        <label>Sequence</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Iconic Brand</label>
    <nameField>
        <label>Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Iconic Brands</pluralLabel>
    <recordTypes>
        <fullName>PRH_Luxury_Account_Competitor</fullName>
        <active>true</active>
        <description>PRH - Luxury Account for Iconic Platform Competitor Brands</description>
        <label>Luxury Account - Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>PRH_Luxury_Account_Pernod</fullName>
        <active>true</active>
        <description>PRH - Luxury Account for Iconic Platform Pernod Brands</description>
        <label>Luxury Account - Pernod</label>
    </recordTypes>
    <recordTypes>
        <fullName>PRH_Luxury_Account_Ricard</fullName>
        <active>true</active>
        <description>PRH - Luxury Account for Iconic Platform Ricard Brands</description>
        <label>Luxury Account - Ricard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PRH_CheckRecordTypeValue</fullName>
        <active>true</active>
        <description>Check value of checkbox PRH_Competitor_Brand__c regarding value of Record Type</description>
        <errorConditionFormula>OR( 
AND (PRH_Competitor_Brand__c = FALSE, $RecordType.Name = &quot;Luxury Account - Competitor&quot;), 
AND (PRH_Competitor_Brand__c = TRUE, $RecordType.Name = &quot;Luxury Account - Pernod&quot;),
AND (PRH_Competitor_Brand__c = TRUE, $RecordType.Name = &quot;Luxury Account - Ricard&quot;) 
)</errorConditionFormula>
        <errorDisplayField>PRH_Competitor_Brand__c</errorDisplayField>
        <errorMessage>If RecordType value is &quot;Luxury Account - Competitor&quot;, you must check field &quot;Competitor Brand&quot; otherwise field &quot;Competitor Brand&quot; must be unchecked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRH_CheckSequenceNumberValue</fullName>
        <active>true</active>
        <description>Sequence value must be :
- COMP{NNNN} if field Competitor Brand is checked
- LCEB{NNNN} otherwise</description>
        <errorConditionFormula>OR(
AND (PRH_Competitor_Brand__c= TRUE, NOT(REGEX(PRH_Sequence__c, &quot;COMP(\\d{4})?&quot;))),
AND (PRH_Competitor_Brand__c= FALSE, NOT(REGEX(PRH_Sequence__c, &quot;LCEB(\\d{4})?&quot;)))
)</errorConditionFormula>
        <errorDisplayField>PRH_Sequence__c</errorDisplayField>
        <errorMessage>Sequence value must be COMP{NNNN} if field Competitor Brand is checked, LCEB{NNNN} otherwise</errorMessage>
    </validationRules>
</CustomObject>